--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -93,6 +93,9 @@ spec:
                     environment {
                         DOCKERFILE      = "Dockerfile"
                         CONTEXT         = "./spa-react-netcore-redis/voting"
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
+                        LATEST_TAG      = "${params.LATEST_TAG}"
                         TAG             = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
@@ -115,10 +118,10 @@ spec:
                                     /kaniko/executor \
                                     --context=dir://${CONTEXT} \
                                     --dockerfile=${DOCKERFILE} \
-                                    --destination=${params.REGISTRY}/${params.IMAGE}:${TAG} \
-                                    --destination=${params.REGISTRY}/${params.IMAGE}:${VERSION}-${VERSION_SUFFIX} \
-                                    --destination=${params.REGISTRY}/${params.IMAGE}:${VERSION_ALT} \
-                                    --destination=${params.REGISTRY}/${params.IMAGE}:${params.LATEST_TAG}
+                                    --destination=${REGISTRY}/${IMAGE}:${TAG} \
+                                    --destination=${REGISTRY}/${IMAGE}:${VERSION}-${VERSION_SUFFIX} \
+                                    --destination=${REGISTRY}/${IMAGE}:${VERSION_ALT} \
+                                    --destination=${REGISTRY}/${IMAGE}:${LATEST_TAG}
                                     '''
                                     buildCompleted = true
                                 } catch (Exception e) {
@@ -139,12 +142,14 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                        VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
+                        VERSION_SUFFIX  = sh(script: 'echo -n ${BRANCH_NAME}', returnStdout: true).trim()
                     }
                     steps {
                         container('tools'){               
-                            echo "Deploy ${params.REGISTRY}/${params.IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Dev Environment"
+                            echo "Deploy ${REGISTRY}/${IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Dev Environment"
                         }
                     }
                 }
@@ -161,12 +166,14 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
                     }
                     steps {
                         container('tools'){               
-                            echo "Deploy ${params.REGISTRY}/${params.IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Test Environment"
+                            echo "Deploy ${REGISTRY}/${IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Test Environment"
                         }
                     }
                 }
@@ -181,6 +188,8 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
                     }
@@ -201,6 +210,8 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
                     }
@@ -224,12 +235,14 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_SUFFIX  = buildSuffix(sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim())
                     }
                     steps {
                         container('tools'){             
-                            echo "Deploy ${params.REGISTRY}/${params.IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Stage Environment"
+                            echo "Deploy ${REGISTRY}/${IMAGE}:${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER} to Stage Environment"
                         }
                     }
                 }
@@ -244,12 +257,14 @@ spec:
                         }
                     }
                     environment {
+                        REGISTRY        = "${params.REGISTRY}"
+                        IMAGE           = "${params.IMAGE}"
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                     }
                     steps {
                         container('tools'){      
-                            echo "Promote ${params.REGISTRY}/${params.IMAGE}:${VERSION} to Production Registry"           
-                            echo "Deploy ${params.IMAGE}:${VERSION} to Prod Environment"
+                            echo "Promote ${REGISTRY}/${IMAGE}:${VERSION} to Production Registry"           
+                            echo "Deploy ${IMAGE}:${VERSION} to Prod Environment"
                             echo "Down-Merge Master into Release, bump Release version no suffix [skip ci]"
 
                         }
