--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -99,7 +99,7 @@ spec:
                         TAG             = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
                         VERSION_BRANCH  = sh(script: 'echo ${CHANGE_BRANCH:=$BRANCH_NAME}', returnStdout: true).trim()
-                        VERSION_SUFFIX  = buildSuffix(${VERSION_BRANCH})
+                        VERSION_SUFFIX  = buildSuffix("${VERSION_BRANCH}")
                         VERSION_ALT     = "${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER}"
                     }
                     steps {
